<resources>
    <string name="app_name">My Application</string>
    <string name="textView">Welcome to Poppy. \nYour Fury Friend App!</string>
    <string name="getStartedButton">Get Started!</string>
    <string name="cleanButton">Clean</string>
    <string name="feedButton">Feed</string>
    <string name="playButton">Play</string>
    <string name="ImageView">secondScreenWelcome</string>
    <string name="todo">TODO</string>
    <string name="hungerTextView">Hunger\n</string>
    <string name="cleanTextView2">Clean</string>
    <string name="qqq">Playful</string>
    <string name="hungerEditTextText">Hunger</string>
    <string name="CleanEditTextText2">Clean</string>
    <string name="playfulEditTextText3">Playful</string>
    <string name="playEditTextView3">Play</string>
    <string name="feedEditTextText">Feed</string>
    <string name="onClick">setOnClickListnener</string>
    <string name="hint">Enter Hunger level</string>
    <string name="HungerLevel">Hunger Level</string>
    <string name="CleanLevel">enterCleanLevel</string>
    <string name="PlayLevel">playeditTextText3</string>
</resources>